--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                         }
                         <div class="text-xs ${isError ? 'text-red-700' : isWarning ? 'text-red-600' : 'text-green-600'} mt-2 flex items-center justify-center">
                             <span class="mr-1">${isError ? '❌' : isWarning ? '⚠' : '✓'}</span> 
-                            ${isError ? 'ข้อมูลไม่ครบถ้วน' : isWarning ? 'กรุณาตรวจสอบขนาด' : 'คำนวณสำเร็จ'}
+                            ${isError ? 'ข้อมูลไม่ครบถ้วน' : isWarning ? 'กรุณาตรวจสอบขนาด' : ''}
                         </div>
                     </div>
                 `;
@@ -384,4 +384,5 @@
 
 </body>
 </html>
+
 
